--- a/ionic-app/vates/package.json
+++ b/ionic-app/vates/package.json
@@ -17,20 +17,27 @@
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
+    "@angular/forms": "^5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "4.9.1",
+    "@ionic-native/http": "^4.12.2",
+    "@ionic-native/speech-recognition": "^4.10.1",
     "@ionic-native/splash-screen": "4.9.1",
     "@ionic-native/status-bar": "4.9.1",
+    "@ionic-native/text-to-speech": "^4.9.2",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "6.3.0",
+    "cordova-plugin-advanced-http": "^2.0.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -49,7 +56,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-tts": {},
+      "cordova-plugin-speechrecognition": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "android"
